# ai_proxy_server

./: .env.example  Dockerfile  README.md  debug_client.py  debug_direct.py  debug_real_time.py  debug_simple.py  docker-compose.yml  litellm_config.yaml  pyproject.toml  test_hybrid_streaming.py  test_litellm_direct.sh  test_mcp_flow.py  test_minimal_proxy.py  test_streaming_comparison.sh
app/: __init__.py  config.py  main.py  mcp_client.py  mcp_config.py  middleware.py  models.py  profiler.py  profiling_endpoint.py  proxy_handler.py  request_modifiers.py  response_modifiers.py  tool_handler.py  utils.py
app/plugin_system/: __init__.py  plugin_manager.py  registry.py
app/plugins/: debug_tester.py
config/: mcp_servers.yaml
configs/: __init__.py  config.py  mcp_servers.yaml  plugins.yaml
docs/: project_walkthrough_conversation_1.md
examples/: example_client.py  weather_server.py
mcp_servers/: README.md  debug_server.py  get_proxy_status.py
plugins/: README.md  example_user_plugin.py
test_scripts/: README.md  debug_client.py  debug_direct.py  debug_real_time.py  profiling_dashboard.html  run_dual_test.sh  test_all_modes.py  test_comprehensive.py  test_dual_server.py  test_mcp_flow.py  test_mode_comparison.py  test_plugin_fix.py  test_proxy_streaming.sh  test_streaming_comparison.sh  test_web_client.html
